--- a/node-authentication/.env
+++ b/node-authentication/.env
@@ -1,7 +1,7 @@
 NODE_ENV=dev
 NODE_PORT=5000
 
-POSTGRES_URL="postgresql://root:root@localhost:5432/main_db?schema=public"
+POSTGRES_URL="postgresql://root:root@localhost:5432/quiz_aadr_be?schema=public"
 # POSTGRES_URL="postgresql://postgres:123@localhost:5432/main_db?schema=public"
 # POSTGRES_URL="postgresql://yudistika.akbar:jYwVlGP2mJr5@ep-twilight-lab-27959760.ap-southeast-1.aws.neon.tech/project_aadr_db?sslmode=require"
 
