--- a/node-authentication/tsconfig.json
+++ b/node-authentication/tsconfig.json
@@ -33,6 +33,6 @@
     //   "@exceptions/*": ["exceptions/*"]
     // }
   },
-  "include": ["src/**/*.ts", "src/**/*.json", ".env"],
+  "include": ["./prisma/**/*.ts", "src/**/*.ts", "src/**/*.json", ".env"],
   "exclude": ["node_modules", "src/http", "src/logs"]
 }
