--- a/node-authentication/package.json
+++ b/node-authentication/package.json
@@ -14,6 +14,7 @@
   "license": "ISC",
   "dependencies": {
     "@prisma/client": "^5.5.2",
+    "@upstash/redis": "^1.25.1",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
